--- a/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Aura/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -731,9 +731,10 @@ BP_ManaGlobe_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-DebuggerAttached=False
+DebuggerAttached=True
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -744,7 +745,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -754,7 +754,8 @@ RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
-OpenAssetsAtExit=/Game/Blueprints/UI/Overlay/BP_AuraHUD.BP_AuraHUD
+OpenAssetsAtExit=/Game/Blueprints/Character/Aura/ABP_AuraCharacter.ABP_AuraCharacter
+OpenAssetsAtExit=/Game/Blueprints/UI/HUD/BP_AuraHUD.BP_AuraHUD
 OpenAssetsAtExit=/Game/Blueprints/Game/BP_AuraGameMode.BP_AuraGameMode
 
 [ContentBrowser]
@@ -770,7 +771,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/Aura/Public/UI
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/Aura/Public/UI/WidgetController
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2474,6 +2475,7 @@ MRUItem19=/Game/Assets/Enemies/Shaman/ShamanStaff/PA_ShamanStaff
 /Game/Maps/MyMap1.MyMap1:PersistentLevel.MyMap1=0
 /Game/Blueprints/UI/Overlay/WBP_Overlay.WBP_Overlay=0
 /Game/Blueprints/UI/Overlay/BP_AuraHUD.BP_AuraHUD=0
+/Game/Blueprints/UI/HUD/BP_AuraHUD.BP_AuraHUD=0
 
 [MaterialEditor]
 PrimType=3
@@ -2655,7 +2657,7 @@ Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [RootWindow]
 ScreenPosition=X=70.400 Y=14.400
-WindowSize=X=1439.200 Y=861.600
+WindowSize=X=1453.600 Y=861.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3794,7 +3796,7 @@ HairCardGeneratorFramework.TimeStamp=2023.04.01-00.22.54
 HairCardGeneratorFramework.LastCompileMethod=Unknown
 TaskGraph.TimeStamp=2023.04.01-00.12.46
 TaskGraph.LastCompileMethod=Unknown
-Aura.TimeStamp=2023.12.15-16.28.38
+Aura.TimeStamp=2023.12.15-20.30.06
 Aura.LastCompileMethod=External
 RD.TimeStamp=2023.12.14-15.12.33
 RD.LastCompileMethod=External
@@ -3943,18 +3945,18 @@ bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/Game/BP_AuraGameMode
-MRUItem1=/Game/Blueprints/UI/Overlay/BP_AuraHUD
-MRUItem2=/Game/Blueprints/UI/Overlay/WBP_Overlay
-MRUItem3=/Game/Blueprints/Character/Aura/BP_AuraCharacter
-MRUItem4=/Game/Maps/MyMap1
-MRUItem5=/Game/Blueprints/UI/ProgressBar/BP_HealthGlobe
-MRUItem6=/Game/Blueprints/UI/ProgressBar/BP_GlobeProgressBarBase
-MRUItem7=/Game/Blueprints/Items/BP_HealthPotion
-MRUItem8=/Game/Blueprints/Player/BP_AuraPlayerState
-MRUItem9=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
-MRUItem10=/Game/Blueprints/Character/BP_EnemyBase
-MRUItem11=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
-MRUItem12=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
+MRUItem1=/Game/Blueprints/UI/HUD/BP_AuraHUD
+MRUItem2=/Game/Blueprints/Character/Aura/ABP_AuraCharacter
+MRUItem3=/Game/Blueprints/UI/Overlay/WBP_Overlay
+MRUItem4=/Game/Blueprints/Character/Aura/BP_AuraCharacter
+MRUItem5=/Game/Maps/MyMap1
+MRUItem6=/Game/Blueprints/UI/ProgressBar/BP_HealthGlobe
+MRUItem7=/Game/Blueprints/UI/ProgressBar/BP_GlobeProgressBarBase
+MRUItem8=/Game/Blueprints/Items/BP_HealthPotion
+MRUItem9=/Game/Blueprints/Player/BP_AuraPlayerState
+MRUItem10=/Game/Blueprints/Character/Goblin_Slingshot/BP_Goblin_Slingshot
+MRUItem11=/Game/Blueprints/Character/BP_EnemyBase
+MRUItem12=/Game/Blueprints/Character/Goblin_Spear/BP_Goblin_Spear
 MRUItem13=/Game/Blueprints/Player/BP_AuraPlayerController
 MRUItem14=/Game/Blueprints/Input/IMC_AuraContext
 MRUItem15=/Game/Blueprints/Input/InputActions/IA_Move
