--- a/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Aura/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -5,7 +5,7 @@ ManagerAttributes.Vital.Health.Expanded=True
 ManagerAttributes.Vital.Mana.Expanded=True
 ManagerAttributes.Vital.MaxHealth.Expanded=True
 ManagerAttributes.Vital.MaxMana.Expanded=True
-Attributes.Expanded=True
+Attributes.Expanded=False
 Attributes.Vital.Expanded=True
 ManagerMessage.HealthPotion.Expanded=True
 ManagerMessage.Expanded=False
@@ -20,4 +20,5 @@ ManagerAttributes.Secondary.Expanded=True
 ManagerAttributes.Primary.Expanded=True
 Attributes.Primary.Expanded=True
 Attributes.Secondary.Expanded=True
+Input.Expanded=True
 
